GitHub Actions: updates on configurations